fix(scss) Simplify theme for dark mode

--- a/src/theme/_theme.scss
+++ b/src/theme/_theme.scss
@@ -14,7 +14,6 @@
 // --------------------------------------------------
 // SUMARiS theme
 // --------------------------------------------------
-@import "mixins";
 @import "theme.tabs";
 @import "theme.table";
 @import "theme.forms";
@@ -222,18 +221,7 @@ app-toolbar ion-segment-button {
   }
 }
 
-
-ion-menu ion-content {
-  --background: var(--ion-item-background, var(--ion-background-color, #fff));
-  --background-color: var(--background);
-
-  ion-list-header.title {
-    color: yellow;
-    text-shadow:
-      0 0 10px var(--background-color),
-      0 0 20px var(--background-color),
-      0 0 30px var(--background-color),
-      0 0 40px var(--background-color);
-    overflow: visible;
-  }
+.hidden {
+  visibility: hidden;
+  display: none;
 }
