--- a/src/theme/_theme.variables.scss
+++ b/src/theme/_theme.variables.scss
@@ -1,7 +1,7 @@
 
 /** Ionic CSS Variables **/
 html {
-  @include css-app-variables-to-root();
+  @include css-variables-to-root();
 }
 
 html.dark {
@@ -67,12 +67,9 @@ html.dark {
   --ion-color-light-contrast-rgb: 255, 255, 255;
   --ion-color-light-shade: #1e2023;
   --ion-color-light-tint: #383a3e;
-
 }
 
-
 html.md.dark {
-
   --app-form-color-disabled: #949494;
   --app-form-color: var(--ion-text-color);
 
@@ -111,9 +108,4 @@ html.md.dark {
   --ion-tab-bar-background: #1f1f1f;
 
   --ion-card-background: #1e1e1e;
-
-  ion-menu ion-content {
-    --background: transparent;
-    --background-color: rgba(var(--ion-color-primary900-rgb), 0.4) !important;
-  }
 }
